# ANTMA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: api-reference.md  architecture.md  memory-model.md  privacy-boundary.md  product-positioning.md  public-release-checklist.md  pypi-release.md  release-notes-template.md  roadmap.md  tutorial.md
docs/live/: CURRENT-STATE.md  NEXT-STEPS.md  WORKLOG.md
docs/roles/: maintainer.md
docs/shared/: agent-reading-policy.md  doc-writing-protocol.md
examples/minimal-team-memory/: README.md
examples/product-team-memory/: MEMORY.shared.md  README.md  antma.json
examples/product-team-memory/agents/product-manager/: MEMORY.md
examples/product-team-memory/agents/researcher/: MEMORY.md
examples/product-team-memory/curation/promotions/: pricing-signal.md
examples/product-team-memory/daily/: 2026-01-15.md
examples/product-team-memory/evidence/: beta-readiness.md
examples/product-team-memory/knowledge-bank/: local-first-patterns.md
examples/product-team-memory/ssot/: beta-scope.md  pricing-decision.md
src/antma/: __init__.py  approvals.py  candidates.py  cli.py  conflict.py  evidence.py  executor.py  fs.py  gates.py  ids.py  indexer.py  ledger.py  models.py  policy.py  project.py  promotion.py  resolver.py  review.py  rollback.py  sanitize.py  scaffold.py  schema.py  snapshots.py  status.py
src/antma/adapters/: __init__.py  base.py  graphiti.py  letta.py  markdown.py  mem0.py  sqlite_fts.py
templates/workspace/: MEMORY.shared.md
templates/workspace/agents/default/: MEMORY.md
templates/workspace/curation/promotions/: example.md
templates/workspace/daily/: example.md
templates/workspace/evidence/: example-packet.md
templates/workspace/knowledge-bank/: example.md
templates/workspace/ssot/: example.md
tests/: test_approvals.py  test_candidates.py  test_cli.py  test_executor.py  test_foundation.py  test_gates.py  test_indexer.py  test_project_api.py  test_resolver.py  test_review.py  test_rollback.py  test_sanitize.py  test_schema.py
