[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antma"
version = "0.2.0"
description = "Filesystem-first memory promotion engine for AI-native team memory."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "ANTMA contributors" }
]
maintainers = [
  { name = "THEINNOLAB" }
]
keywords = ["ai-agents", "memory", "markdown", "obsidian", "knowledge-management"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tomli>=2; python_version < \"3.11\"",
]

[project.urls]
Homepage = "https://github.com/THEINNOLAB/ANTMA"
Repository = "https://github.com/THEINNOLAB/ANTMA"
Issues = "https://github.com/THEINNOLAB/ANTMA/issues"
Security = "https://github.com/THEINNOLAB/ANTMA/security/advisories"
Changelog = "https://github.com/THEINNOLAB/ANTMA/blob/main/CHANGELOG.md"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
antma = "antma.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
